<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/campagne_svg">

    <TextView
        android:text="@string/Memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:padding="10dp"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <TextView
        android:text="@string/Description_Memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Explanation"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Animaux"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/theme_memory_animaux"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/animauxPCT"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <Button
                android:text="@string/Memory_Play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button_memory_animaux"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Memory_Chiffres"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/theme_memory_chiffres"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/chiffresPCT"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <Button
                android:text="@string/Memory_Play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button_memory_chiffres"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Memory_Maison"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/theme_memory_maison"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/maisonPCT"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <Button
                android:text="@string/Memory_Play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button_memory_maison"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/Memory_Foret"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/theme_memory_foret"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/foretPCT"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <Button
                android:text="@string/Memory_Play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button_memory_foret"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/Memory_Ville"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/theme_memory_ville"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center" />

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/villePCT"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <Button
                android:text="@string/Memory_Play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button_memory_ville"
                android:layout_weight="1"
                android:layout_gravity="end"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

</LinearLayout>